--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -28,7 +28,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-tertiary-tint: #6370ff;
 
   /** success **/
-  --ion-color-success: #2dd36f;
+  --ion-color-success: #328c2d;
   --ion-color-success-rgb: 45, 211, 111;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255, 255, 255;
@@ -74,6 +74,14 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+    /** green **/
+    --ion-color-green: #2dd33b;
+    --ion-color-green-rgb: 45, 211, 59;
+    --ion-color-green-contrast: #ffffff;
+    --ion-color-green-contrast-rgb: 255, 255, 255;
+    --ion-color-green: #28ba28;
+    --ion-color-green-tint: #42d753;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -233,4 +241,6 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-card-background: #1e1e1e;
   }
+
+ 
 }
